--- a/Phoenix/Libraries/Renderer.vcxproj.filters
+++ b/Phoenix/Libraries/Renderer.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="..\..\Common\Renderer\VulkanRenderer.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Common\Renderer\keyBindings.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
