--- a/Phoenix/Libraries/RendererOpenGL.vcxproj
+++ b/Phoenix/Libraries/RendererOpenGL.vcxproj
@@ -26,10 +26,14 @@
     <ClCompile Include="..\..\Common\Thirdparty\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="..\..\Common\Thirdparty\imgui\imgui_impl_sdl.cpp" />
     <ClCompile Include="..\..\Common\Thirdparty\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="..\RendererOpenGL\Components\LightComponent.cpp" />
+    <ClCompile Include="..\RendererOpenGL\Components\ModelComponent.cpp" />
     <ClCompile Include="..\RendererOpenGL\DefferedShading.cpp" />
     <ClCompile Include="..\RendererOpenGL\ForwardLighting.cpp" />
     <ClCompile Include="..\RendererOpenGL\main.cpp" />
+    <ClCompile Include="..\RendererOpenGL\Physics.cpp" />
     <ClCompile Include="..\RendererOpenGL\RendererOpenGL.cpp" />
+    <ClCompile Include="..\RendererOpenGL\Systems\LightingSystem.cpp" />
     <ClCompile Include="..\RendererOpenGL\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -43,8 +47,11 @@
     <ClInclude Include="..\..\Common\Thirdparty\imgui\imstb_textedit.h" />
     <ClInclude Include="..\..\Common\Thirdparty\imgui\imstb_truetype.h" />
     <ClInclude Include="..\RendererOpenGL\Common.h" />
+    <ClInclude Include="..\RendererOpenGL\Components\LightComponent.h" />
+    <ClInclude Include="..\RendererOpenGL\Components\ModelComponent.h" />
     <ClInclude Include="..\RendererOpenGL\Picker.h" />
     <ClInclude Include="..\RendererOpenGL\RendererOpenGL.h" />
+    <ClInclude Include="..\RendererOpenGL\Systems\LightingSystem.h" />
     <ClInclude Include="..\RendererOpenGL\Window.h" />
   </ItemGroup>
   <ItemGroup>
@@ -108,24 +115,24 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IntDir>$(SolutionDir)$(Configuration)\Intermediates\$(ProjectName)\$(Configuration)\</IntDir>
-    <LibraryPath>$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\libs\$(Platform)\$(Configuration);$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\libs\$(Platform)\$(Configuration);$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
+    <LibraryPath>$(SolutionDir)$(Configuration)\;$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\libs\$(Platform)\$(Configuration);$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\libs\$(Platform)\$(Configuration);$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
     <IncludePath>$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\include;$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\include;$(SolutionDir)..\Common\Thirdparty;$(SolutionDir)..\Common\Thirdparty\glad\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IntDir>$(SolutionDir)$(Configuration)\Intermediates\$(ProjectName)\$(Configuration)\</IntDir>
-    <LibraryPath>$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\libs\$(Platform)\$(Configuration);$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\libs\$(Platform)\$(Configuration);$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
+    <LibraryPath>$(SolutionDir)$(Configuration)\;$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\libs\$(Platform)\$(Configuration);$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\libs\$(Platform)\$(Configuration);$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
     <IncludePath>$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\include;$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\include;$(SolutionDir)..\Common\Thirdparty;$(SolutionDir)..\Common\Thirdparty\glad\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IntDir>$(SolutionDir)$(Configuration)\Intermediates\$(ProjectName)\$(Configuration)\</IntDir>
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
-    <LibraryPath>$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\libs\$(Platform)\$(Configuration);$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\libs\$(Platform)\$(Configuration);$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
+    <LibraryPath>$(SolutionDir)$(Configuration)\;$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\libs\$(Platform)\$(Configuration);$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\libs\$(Platform)\$(Configuration);$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
     <IncludePath>$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\include;$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\include;$(SolutionDir)..\Common\Thirdparty;$(SolutionDir)..\Common\Thirdparty\glad\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IntDir>$(SolutionDir)$(Configuration)\Intermediates\$(ProjectName)\$(Configuration)\</IntDir>
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
-    <LibraryPath>$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\libs\$(Platform)\$(Configuration);$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\libs\$(Platform)\$(Configuration);$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
+    <LibraryPath>$(SolutionDir)$(Configuration)\;$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\libs\$(Platform)\$(Configuration);$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\libs\$(Platform)\$(Configuration);$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
     <IncludePath>$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\include;$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\include;$(SolutionDir)..\Common\Thirdparty;$(SolutionDir)..\Common\Thirdparty\glad\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -136,7 +143,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>SDL2d.lib;assimp-vc141-mtd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ECS.lib;SDL2d.lib;assimp-vc141-mtd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y "$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\dlls\$(Platform)\$(Configuration)" "$(SolutionDir)$(Configuration)"
@@ -151,7 +158,7 @@ copy /Y "$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\dlls\$(Platform)\$(Confi
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>SDL2d.lib;assimp-vc141-mtd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ECS.lib;SDL2d.lib;assimp-vc141-mtd.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y "$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\dlls\$(Platform)\$(Configuration)" "$(SolutionDir)$(Configuration)"
@@ -170,7 +177,7 @@ copy /Y "$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\dlls\$(Platform)\$(Confi
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SDL2.lib;assimp-vc141-mt.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ECS.lib;SDL2.lib;assimp-vc141-mt.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y "$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\dlls\$(Platform)\$(Configuration)" "$(SolutionDir)$(Configuration)"
@@ -189,7 +196,7 @@ copy /Y "$(SolutionDir)..\Common\Thirdparty\SDL2-2.0.10\dlls\$(Platform)\$(Confi
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>SDL2.lib;assimp-vc141-mt.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ECS.lib;SDL2.lib;assimp-vc141-mt.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy /Y "$(SolutionDir)..\Common\Thirdparty\assimp-5.0.0\dlls\$(Platform)\$(Configuration)" "$(SolutionDir)$(Configuration)"
