--- a/Phoenix/Libraries/RendererOpenGL.vcxproj
+++ b/Phoenix/Libraries/RendererOpenGL.vcxproj
@@ -26,14 +26,14 @@
     <ClCompile Include="..\..\Common\Thirdparty\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="..\..\Common\Thirdparty\imgui\imgui_impl_sdl.cpp" />
     <ClCompile Include="..\..\Common\Thirdparty\imgui\imgui_widgets.cpp" />
-    <ClCompile Include="..\RendererOpenGL\Components\LightComponent.cpp" />
-    <ClCompile Include="..\RendererOpenGL\Components\ModelComponent.cpp" />
-    <ClCompile Include="..\RendererOpenGL\DefferedShading.cpp" />
-    <ClCompile Include="..\RendererOpenGL\ForwardLighting.cpp" />
-    <ClCompile Include="..\RendererOpenGL\main.cpp" />
-    <ClCompile Include="..\RendererOpenGL\Physics.cpp" />
+    <ClCompile Include="..\RendererOpenGL\App\Components\LightComponent.cpp" />
+    <ClCompile Include="..\RendererOpenGL\App\Components\ModelComponent.cpp" />
+    <ClCompile Include="..\RendererOpenGL\App\DefferedShading.cpp" />
+    <ClCompile Include="..\RendererOpenGL\App\ForwardLighting.cpp" />
+    <ClCompile Include="..\RendererOpenGL\App\main.cpp" />
+    <ClCompile Include="..\RendererOpenGL\App\Physics.cpp" />
+    <ClCompile Include="..\RendererOpenGL\App\Systems\LightingSystem.cpp" />
     <ClCompile Include="..\RendererOpenGL\RendererOpenGL.cpp" />
-    <ClCompile Include="..\RendererOpenGL\Systems\LightingSystem.cpp" />
     <ClCompile Include="..\RendererOpenGL\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -46,21 +46,27 @@
     <ClInclude Include="..\..\Common\Thirdparty\imgui\imstb_rectpack.h" />
     <ClInclude Include="..\..\Common\Thirdparty\imgui\imstb_textedit.h" />
     <ClInclude Include="..\..\Common\Thirdparty\imgui\imstb_truetype.h" />
+    <ClInclude Include="..\RendererOpenGL\App\Components\LightComponent.h" />
+    <ClInclude Include="..\RendererOpenGL\App\Components\ModelComponent.h" />
+    <ClInclude Include="..\RendererOpenGL\App\Systems\LightingSystem.h" />
     <ClInclude Include="..\RendererOpenGL\Common.h" />
-    <ClInclude Include="..\RendererOpenGL\Components\LightComponent.h" />
-    <ClInclude Include="..\RendererOpenGL\Components\ModelComponent.h" />
     <ClInclude Include="..\RendererOpenGL\Picker.h" />
     <ClInclude Include="..\RendererOpenGL\RendererOpenGL.h" />
-    <ClInclude Include="..\RendererOpenGL\Systems\LightingSystem.h" />
     <ClInclude Include="..\RendererOpenGL\Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\RendererOpenGL\Shaders\deferred_light_box.frag" />
-    <None Include="..\RendererOpenGL\Shaders\deferred_light_box.vert" />
-    <None Include="..\RendererOpenGL\Shaders\deferred_shading.frag" />
-    <None Include="..\RendererOpenGL\Shaders\deferred_shading.vert" />
-    <None Include="..\RendererOpenGL\Shaders\g_buffer.frag" />
-    <None Include="..\RendererOpenGL\Shaders\g_buffer.vert" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\basic_lighting.frag" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\basic_lighting.vert" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\deferred_light_box.frag" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\deferred_light_box.vert" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\deferred_shading.frag" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\deferred_shading.vert" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\g_buffer.frag" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\g_buffer.vert" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\mesh.frag" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\mesh.vert" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\model.frag" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\model.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
