--- a/Phoenix/Libraries/RendererOpenGL.vcxproj
+++ b/Phoenix/Libraries/RendererOpenGL.vcxproj
@@ -67,6 +67,10 @@
     <None Include="..\RendererOpenGL\App\Resources\Shaders\mesh.vert" />
     <None Include="..\RendererOpenGL\App\Resources\Shaders\model.frag" />
     <None Include="..\RendererOpenGL\App\Resources\Shaders\model.vert" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\shadow_debug.frag" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\shadow_debug.vert" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\shadow_depth.frag" />
+    <None Include="..\RendererOpenGL\App\Resources\Shaders\shadow_depth.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
