--- a/Phoenix/Libraries/RendererOpenGL.vcxproj.filters
+++ b/Phoenix/Libraries/RendererOpenGL.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Resource Files\Shaders\ForwardLighting">
       <UniqueIdentifier>{cacc01e1-96bb-4aa8-a748-e6e839e6dc82}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Phoenix\Quaternion">
+      <UniqueIdentifier>{bdbe753f-c924-4f13-9f06-085183c8a06a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Common\Thirdparty\imgui\imgui.cpp">
@@ -87,6 +90,9 @@
     <ClCompile Include="..\RendererOpenGL\App\Physics.cpp">
       <Filter>Source Files\Examples</Filter>
     </ClCompile>
+    <ClCompile Include="..\RendererOpenGL\Quaternion.cpp">
+      <Filter>Source Files\Phoenix\Quaternion</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Common\Thirdparty\imgui\imconfig.h">
@@ -136,6 +142,9 @@
     </ClInclude>
     <ClInclude Include="..\RendererOpenGL\App\Systems\LightingSystem.h">
       <Filter>Source Files\Examples\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="..\RendererOpenGL\Quaternion.h">
+      <Filter>Source Files\Phoenix\Quaternion</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
